@@ -1,3 +1,11 @@
+Mon Jul 14 04:27:35 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimAccountsWindow.cpp:
+	* src/QGaimAccountsWindow.h:
+	* src/QGaimConvWindow.cpp:
+	* src/QGaimConvWindow.h:
+	  - Added the conversations button to the accounts window.
+
 Mon Jul 14 04:25:41 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBListWindow.cpp:
